2011-12-28  6.7.4-3 Cristy  <quetzlzacatenango@image...>
  * Fix memory leak in JP2 coder (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20071).
  * Use maximum bounds when rendering PDF (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20078).

2011-12-25  6.7.4-2 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-2, SVN revision 6254.

2011-12-24  6.7.4-2 Cristy  <quetzlzacatenango@image...>
  * Export new Windows binaries.

2011-12-21  6.7.4-1 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-1, SVN revision 6236.

2011-12-12  6.7.4-0 Cristy  <quetzlzacatenango@image...>
  * Sped up -noise option when radius is 0.
  * Read concatentated arcs correctly in a SVG path (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19992).
  * PDF's now convert properly with -define pdf:use-cropbox=true (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=20033).

2011-12-09  6.7.4-0 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.4-0, SVN revision 6162.

2010-12-06  6.7.4-0 Glenn Randers-Pehrson <glennrp@image...>
  * Eliminated use of FARDATA in coders/png.c; it won't be supported in
    libpng-1.6.0 and is not needed now.

2011-11-29  6.7.4-0 Cristy  <quetzlzacatenango@image...>
  * Add GetQuantumFormat() method to return the quantum format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=19961).
  * Allow unspecified width/height in geometries with the aspect flag (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=19964).
  * MagickGetImageDepth() no longer returns the depth setting but instead
    computes the depth of the image.
   
2011-12-02  6.7.4-0 Anthony  <quetzlzacatenango@image...>
  * Fixed Equal-Area Cropping (size and minimum of delta increments)

2011-12-01  6.7.3-10 Cristy  <quetzlzacatenango@image...>
  * New version 6.7.3-10, SVN revision 6106.
